@@ -1,6 +1,8 @@
 from __future__ import absolute_import, unicode_literals
 
+import inspect
 import re
+import sys
 import unicodedata
 
 from django.apps import apps
@@ -94,3 +96,20 @@ def cautious_slugify(value):
     # mark_safe); this will also strip out the backslashes from the 'backslashreplace'
     # conversion
     return slugify(value)
+
+
+def accepts_kwarg(func, kwarg):
+    """
+    Determine whether the callable `func` has a signature that accepts the keyword argument `kwarg`
+    """
+    if sys.version_info >= (3, 3):
+        signature = inspect.signature(func)
+        try:
+            signature.bind_partial(**{kwarg: None})
+            return True
+        except TypeError:
+            return False
+    else:
+        # Fall back on inspect.getargspec, available on Python 2.7 but deprecated since 3.5
+        argspec = inspect.getargspec(func)
+        return (kwarg in argspec.args) or (argspec.keywords is not None)
